Finish Auth0 authentication, fix app architecture, separate files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<title>Kingdom of Knowledge</title>
 
-		<style> body { margin: 0; } </style>
+		<style>
+        html {
+            box-sizing: border-box;
+        }
+
+        html, body, #root, #root>div {
+            height: 100%;
+            width: 100%;
+        }
+
+		</style>
 	</head>
 	<body>
 		<div id="root"></div>
